--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="menu-right-part">
                 <div class="logo-holder">
-                    <a href="single.html">
+                    <a href="https://jennyswhitelist.github.io">
                         <img src="images/logo.png" alt="">
                     </a>
                 </div>
