--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="site-info-holder">
                     <h1 class="site-title">My Two-Way Miror</h1>
                     <p class="site-description">
-                        Thank you for checking out my blog. I analyze data and write about it.
+                        My name is Jenny Jo Conner. Thank you for checking out my blog. I analyze data and write about it. If you'd like to contact me, drop me a line at jennyjosmith.2020@gmail.com.
                     </p>
                 </div>
                 <nav id="header-main-menu">
