--- a/post_IMDb.html
+++ b/post_IMDb.html
@@ -44,7 +44,7 @@
                 <div class="site-info-holder">
                     <div class="site-title">Jenny Jo Conner</div>
                     <p class="site-description">
-                        Thank you for checking out my blog. I analyze data and write about it.
+                        Thank you for checking out my blog. I analyze data and write about it. If you'd like to contact me, drop me a line at jennyjosmith.2020@gmail.com.
                     </p>
                 </div>
                 <nav id="header-main-menu">
