--- a/post_IMDb.html
+++ b/post_IMDb.html
@@ -94,7 +94,7 @@
                     <div class="post-info content-660 center-relative">
                         <div class="cat-links">
                             <ul>
-                                <li><a href="#">Entertainment</a></li>
+                                <li><a href="#">Gender</a></li>
                             </ul>
                         </div>
                         <div class="entry-date published">November 28, 2018</div>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="content-wrap content-660 center-relative ">
                             <p>See the full notebook for the charts above on
-                            <a href="https://github.com/jennyswhitelist/IMDbAnalysis/blob/master/IMDbLinearRegression.ipynb">Github.</a></li></p>
+                            <a href="https://github.com/jennyswhitelist/IMDbAnalysis/blob/master/IMDbLinearRegression.ipynb" style="color:blue" >Github.</a></li></p>
                             <br>
                             <p>Which, of course, prompts the question: “Why?”  To scratch the surface of this exploration, I took a look at 64 movies released in 2017. These include the top 40 most reviewed movies by IMDb voters, the top 40 grossing movies, and the bottom 20 ROI generating movies produced by major studios. When you take a closer look, it becomes quite clear: far more males than females rate movies on IMDb.</p>
 
