--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                 </div>
                 <div class="site-info-holder">
-                    <h1 class="site-title">My Two-Way Miror</h1>
+                    <h1 class="site-title">jennyswhitelist</h1>
                     <p class="site-description">
                         My name is Jenny Jo Conner. Thank you for checking out my blog. I analyze data and write about it. If you'd like to contact me, drop me a line at jennyjosmith.2020@gmail.com.
                     </p>
